mobile styling, reverse display order of team members

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="team_members">
-  {% for team_member in site.team_members %}
+  {% for team_member in site.team_members reversed %}
 
     <div class="team_member">
       <h1>{{ team_member.name }}</h1>
