--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
       <h1>{{ team_member.name }}</h1>
       <img src="images/team_members/{{team_member.image}}">
       <p>"{{team_member.quote}}"</p>
+      <a href="#" class="button button--wayra">Visa Profil</a>
     </div>
 
   {% endfor %}
