--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ layout: default
   {% for team_member in site.team_members reversed %}
 
     <div class="team_member">
-      <h1>{{ team_member.name }}</h1>
       <img src="images/team_members/{{team_member.image}}">
-      <p>"{{team_member.quote}}"</p>
+      <h1 class="name">{{ team_member.name }}</h1>
       {% if team_member.cv_link %}
         <a href="{{team_member.cv_link}}" target="_blank" class="button button--wayra">Visa Profil</a>
       {% endif %}
+      <p class="quote">"{{team_member.quote}}"</p>
     </div>
 
   {% endfor %}
