--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ layout: default
   {% for team_member in site.team_members reversed %}
 
     <div class="team_member">
-      <img src="images/team_members/{{team_member.image}}">
+        <div class="image-container">
+            <img src="images/team_members/{{team_member.image}}">
+        </div>
       <h1 class="name">{{ team_member.name }}</h1>
       {% if team_member.cv_link %}
         <a href="{{team_member.cv_link}}" target="_blank" class="button button--wayra">Visa Profil</a>
