--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="team_members">
   {% for team_member in site.team_members reversed %}
 
-    <div class="team_member">
+    <div class="team-member">
         <div class="image-container">
             <img src="images/team_members/{{team_member.image}}">
         </div>
@@ -36,7 +36,7 @@ layout: default
   {% endfor %}
 </div>
 
-<div class="instagram_posts">
+<div class="instagram-posts">
 </div>
 
 <script src="{{ site.baseurl }}/scripts/instagram.js"></script>
