--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ layout: default
 </div>
 
 <hr class="divider">
+<p>Vi har roligt tillsammans! Vi har besökt flertalet länder och upplevt till exempel ...</p>
 
 <div class="posts">
     {% for post in site.posts limit: 3 %}
@@ -36,3 +37,5 @@ layout: default
 </div>
 
 <script src="{{ site.baseurl }}/scripts/instagram.js"></script>
+<script src="{{ site.baseurl }}/scripts/skrollr.js"></script>
+<script src="{{ site.baseurl }}/scripts/main.js"></script>
