--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 ---
 layout: default
 ---
+<div class="landing">
+  <header class="global-header">
+    <div class="border"></div>
+    <div class="logo">syson.</div>
+  </header>
+  <p class="landing-text">
+      Om ekonomisk frihet, gemenskap och öppenhet är ord som tilltalar dig så har du hittat rätt. Våran stjärntrupp består av ...
+  </p>
+</div>
 
 <div class="team_members">
   {% for team_member in site.team reversed %}
