--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="landing">
   <header class="global-header">
     <div class="border"></div>
-    <div class="logo">syson.</div>
+    <div class="logo"><a href="{{ site.baseurl }}/">syson.</a></div>
   </header>
   <p class="landing-text">
       Om ekonomisk frihet, gemenskap och öppenhet är ord som tilltalar dig så har du hittat rätt. Våran stjärntrupp består av ...
