added company description block

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ layout: default
       <!--Om ekonomisk frihet, gemenskap och öppenhet är ord som tilltalar dig så har du hittat rätt. Våran stjärntrupp består av ...-->
   <!--</p>-->
 <!--</div>-->
-
+<p class="company-description">Vi är ett gäng IT-konsulter inom systemutveckling och test som värdesätter ekonomisk frihet, öppenhet och gemenskap.
+    Syson är idag det vi tillsammans har gjort det till och det kommer bli precis det vi tillsammans gör det till. </p>
 <div class="team_members">
   {% for team_member in site.team reversed %}
 
