--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ layout: default
       {% if team_member.cv_link %}
         <a href="{{team_member.cv_link}}" target="_blank" class="button button--wayra">Visa Profil</a>
       {% endif %}
-      <p class="quote">"{{team_member.quote}}"</p>
+      {% if team_member.quote %}
+        <p class="quote">"{{team_member.quote}}"</p>
+      {% endif %}
     </div>
 
   {% endfor %}
