uppdatera intro-text

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@ layout: default
       <!--Om ekonomisk frihet, gemenskap och öppenhet är ord som tilltalar dig så har du hittat rätt. Våran stjärntrupp består av ...-->
   <!--</p>-->
 <!--</div>-->
-<p class="company-description">Vi är ett gäng IT-konsulter inom systemutveckling och test som värdesätter ekonomisk frihet, öppenhet och gemenskap.
-    Syson är idag det vi tillsammans har gjort det till och det kommer bli precis det vi tillsammans gör det till. </p>
+<div class="company-description">
+  <p>Trevligt att råkas. Du har precis landat hos Syson, ett gäng IT-konsulter som värdesätter ekonomisk frihet och gemenskap, som tycker sitt arbete är jäkligt kul men som också vill hinna njuta av livet.</p>
+  <p>Hos oss har du i princip samma ekonomiska friheter som om du vore egen företagare men du slipper t.ex sälj, förhandla priser och sköta bokföring. Det är du som bestämmer i vilken omfattning du arbetar, om du köper senaste telefonen, tar ut tjänstebil eller kanske föredrar långa semestrar.</p>
+  <p>Inte nog med det så får du också ett riktigt bra gäng på köpet. Vi är en salig blandning DJs, hårdrockare, föräldrar, löpare, backendare, frontendare och testare för att nämna några. Tillsammans har vi åkt skidor, turistat i ett antal olika länder och skall snart åka och prova på att surfa i Frankrike. Ibland smäller vi upp ordentliga fester, ibland hittar vi på aktiviteter(tänk gokart) och ibland... träffas vi bara.</p>
+  <p>Vi är nog ganska stolta över vad vi som kolleger representerar och om du är intresserad av vilka vi är, vad vi gör eller har upplevt tillsammans så släng ett öga här nedanför.</p>
+</div>
 <div class="team_members">
   {% for team_member in site.team reversed %}
 
