--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
 
 <script>
     var script = document.createElement('script');
-    script.src = 'https://api.instagram.com/v1/users/1805388781/media/recent/?client_id=6f84264e1db54f31b62a2a823557f7f3&callback=handler';
+    script.src = 'https://api.instagram.com/v1/users/1805388781/media/recent/?access_token=1805388781.6f84264.9744f2c17419480195e4cc833131f08e&callback=handler';
 
     document.getElementsByTagName('head')[0].appendChild(script);
 
