--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@ layout: default
   <!--</p>-->
 <!--</div>-->
 <div class="company-description">
-  <p>Trevligt att råkas. Du har precis landat hos Syson, ett gäng IT-konsulter som värdesätter ekonomisk frihet och gemenskap, som tycker sitt arbete är jäkligt kul men som också vill hinna njuta av livet.</p>
-  <p>Hos oss har du i princip samma ekonomiska friheter som om du vore egenföretagare men du slipper t.ex sälj, förhandla priser och sköta bokföring. Det är du som bestämmer i vilken omfattning du arbetar, om du köper senaste telefonen, tar ut tjänstebil eller kanske föredrar långa semestrar.</p>
-  <p>Inte nog med det så får du också ett riktigt bra gäng på köpet. Vi är en salig blandning DJs, hårdrockare, föräldrar, löpare, backendare, frontendare och testare för att nämna några. Tillsammans har vi åkt skidor, turistat i ett antal olika länder och skall snart åka och prova på att surfa i Frankrike. Ibland smäller vi upp ordentliga fester, ibland hittar vi på aktiviteter(tänk gokart) och ibland... träffas vi bara.</p>
-  <p class="last">Vi är stolta över vad vi som kolleger representerar och om du är intresserad av vilka vi är, vad vi gör eller har upplevt tillsammans så släng ett öga här nedanför.</p>
+  <p>Hej! Vi är ett skönt gäng konsulter i Stockholm, 👌🏆 inom systemutveckling och systemtest.</p>
 </div>
 <div class="team_members">
   {% for team_member in site.team reversed %}
