--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
   <!--</p>-->
 <!--</div>-->
 <div class="company-description">
-  <p>Hej! Vi är ett skönt gäng konsulter i Stockholm, 👌🏆 inom systemutveckling och systemtest. <a href="{{ site.baseurl }}/om/">Läs mer</a></p>
+  <p>Vi är ett skönt gäng konsulter i Stockholm, 👌🏆 inom systemutveckling och systemtest. <a href="{{ site.baseurl }}/om/">Läs mer</a></p>
 </div>
 <div class="team_members">
   {% for team_member in site.team reversed %}
