styling of salary calc

--- a/salary-calculator-page.html
+++ b/salary-calculator-page.html
@@ -3,5 +3,5 @@ layout: default
 permalink: /lonemodell/
 ---
 <div>
-	{% include salary_calculator.html %}
+	{% include salary-calculator.html %}
 </div>
