removed "läs mer" link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="company-description">
-  <p>Vi är ett gäng konsulter i Stockholm, duktiga inom systemutveckling och systemtest. <a href="{{ site.baseurl }}/om/">Läs mer</a></p>
+  <p>Vi är ett gäng konsulter i Stockholm, duktiga inom systemutveckling och systemtest.</p>
 </div>
 <div class="team_members">
   {% assign count = 0 %}
