--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@ layout: default
 </div>
 
 <hr class="divider">
+<div class="companies">
+    <h1 class="guttered-bottom ">Kundcase</h1>
+    <div class="company-logotype">
+        <img src="{{ site.baseurl }}/images/sj.jpg"/>
+        <p>Vi hjälpte SJ att ta nya sj.se från prototyp till produktion</p>
+    </div>
+    <div class="company-logotype">
+        <img src="{{ site.baseurl }}/images/comhem.jpg"/>
+        <p>Vi hjälper Com Hem med comhem.se och nya comhemplay.se</p>
+    </div>
+</div>
+
+<hr class="divider">
 
 <div class="salary-teaser">
     <h1>Lönemodell</h1>
