--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
 <hr class="divider">
 
 <div class="salary-teaser">
-    <h1>Lönemodell</h1>
+    <h1 class="center guttered-bottom">Lönemodell</h1>
     <div class="salary-calculator">
         <p>Vår lönemodell är enkel: du får 70% av det du drar in när du har ett uppdrag, 26000:- när du inte har ett uppdrag. I övrigt har vi 30 dagars semester och åker ofta på konferenser. ⛷🏖</p>
         <br>
@@ -79,7 +79,7 @@ layout: default
 <hr class="divider">
 
 <div class="instagram-headline">
-    <h1>Följ oss på Instagram <a href="http://instagram.com/syson.se">@syson.se</a></h1>
+    <h1 class="center guttered-bottom">Följ oss på Instagram <a href="http://instagram.com/syson.se">@syson.se</a></h1>
 </div>
 
 <script src="scripts/masonry.pkgd.min.js"></script>
