--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
 <div class="salary-teaser">
     <h1 class="center guttered-bottom">Lönemodell</h1>
     <div class="salary-calculator">
-        <p>Vår lönemodell är enkel: du får 70% av det du drar in när du har ett uppdrag, 26000:- när du inte har ett uppdrag. I övrigt har vi 30 dagars semester och åker ofta på konferenser. ⛷🏖</p>
+        <p>Vår lönemodell är enkel: du får 70% av det du drar in när du har ett uppdrag, 26000:- när du inte har ett uppdrag. I övrigt har vi 30 dagars semester och åker på konferens två gånger om året. ⛷🏖</p>
         <br>
         <h2><label>Timpris: <input id="hourlyRate" type="number" pattern="\d*" value="800" onchange="displaySalary(event.target.valueAsNumber)"/></label></h2>
         <h2>Lön: <span id="salary"></span>:-</h2>
