copy change and slightly bigger text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="company-description">
-  <p>Hej! 👋 Vi är ett gäng konsulter i Stockholm, duktiga inom systemutveckling och systemtest.</p>
+  <h3>Hej! 👋 Vi är ett gäng konsulter i Stockholm, duktiga inom systemutveckling och systemtest.</h3>
 </div>
 <div class="team_members">
   {% assign count = 0 %}
@@ -82,7 +82,7 @@ layout: default
 <hr class="divider">
 
 <div class="instagram-headline">
-    <h1 class="center guttered-bottom">Följ oss på Instagram <a href="http://instagram.com/syson.se">@syson.se</a></h1>
+    <h1 class="center guttered-bottom">Instagram <a href="http://instagram.com/syson.se">@syson.se</a></h1>
 </div>
 
 <script src="scripts/masonry.pkgd.min.js"></script>
