added new fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="company-description">
-  <h3>Hej! 👋 Vi är ett gäng konsulter i Stockholm, duktiga inom systemutveckling och systemtest.</h3>
+  Hej! 👋 Vi är ett gäng konsulter i Stockholm, duktiga inom systemutveckling och systemtest.
 </div>
 <div class="team_members">
   {% assign count = 0 %}
@@ -48,9 +48,9 @@ layout: default
         <p>Vår lönemodell är enkel: du får 70% av det du drar in när du har ett uppdrag, 26 000 kr när du inte har ett uppdrag. I övrigt har vi 30 dagars semester och åker på konferens två gånger om året. ⛷🏖</p>
 
         <div class="salary-calculator">
-            <h2>Timpris: <span id="hourlyRateDisplay"></span> kr</h2>
+            <h3>Timpris: <span id="hourlyRateDisplay"></span> kr</h2>
             <h2><input id="hourlyRateInput" type="range" min="500" max="1100" step="10" oninput="displaySalary(event.target.valueAsNumber)"/></h2>
-            <h2>Lön: <span id="salary"></span> kr</h2>
+            <h3>Lön: <span id="salary"></span> kr</h2>
         </div>
 
         <p>Månadslönen är uträknad med 160 timmar i månaden och 2 600 kr i pension. Givetvis kan man själv välja hur man vill fördela mellan lön, pension, eventuell tjänstebil med mera.</p>
