down-arrow on "visa alla"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 </div>
 
 <div class="show-all-btn-container">
-    <button id="show-all-btn" class="button button--wayra">Visa alla</button>
+    <button id="show-all-btn" class="button button--wayra">Visa alla ▼</button>
 </div>
 
 <hr class="divider">
