--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@ layout: default
 <hr class="divider">
 
 <div class="instagram-headline">
-    <h1 class="center guttered-bottom">Instagram <a href="http://instagram.com/syson.se">@syson.se</a></h1>
+    <h1 class="center guttered-bottom">Kultur</h1>
+    <p>Se vad vi har för oss just nu 📸</p>
+    <a id="instagram-follow-button" href="http://instagram.com/syson.se">
+        <button class="button button--wayra">Följ oss på Instagram</button>
+    </a>
 </div>
 
 <script src="scripts/masonry.pkgd.min.js"></script>
