remove margin, change copy

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 
 <hr class="divider">
 <div class="companies">
-    <h1 class="guttered-bottom ">Kundcase</h1>
+    <h1 class="guttered-bottom ">Utvalda Kunder</h1>
     <div class="company-logotype">
         <img src="{{ site.baseurl }}/images/sj.jpg"/>
         <p>Vi hjälpte SJ att ta nya sj.se från prototyp till produktion</p>
